--- a/Formatos.Pdf.Infrastructure/Formatos.Pdf.Infrastructure.csproj
+++ b/Formatos.Pdf.Infrastructure/Formatos.Pdf.Infrastructure.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="DinkToPdf" Version="1.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
   </ItemGroup>
@@ -19,4 +20,7 @@
     <ProjectReference Include="..\Formatos.Pdf.Core\Formatos.Pdf.Core.csproj" />
   </ItemGroup>
 
+<ItemGroup>
+    <None Include="libwkhtmltox.dll" CopyToOutputDirectory="Always" />
+</ItemGroup>
 </Project>
